<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_create_password_root"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreatePasswordFragment">

    <ImageView
        android:id="@+id/login_neurolab_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="@dimen/margin_large"
        android:paddingEnd="@dimen/margin_large"
        android:src="@drawable/neurolab_logo"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        android:gravity="center">

            <TextView
                android:id="@+id/create_password_label"
                style="@style/TextSmallGrey"
                android:textColor="@color/colorTextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:minHeight="128dp"
                android:layout_margin="@dimen/margin_small"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/create_password_input_layout_1"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_password_edit_text_1"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/enter_password"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:minHeight="128dp"
                android:layout_margin="@dimen/margin_small"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/create_password_input_layout_2"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/create_password_edit_text_2"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/retype_password"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/create_password_disclaimer_checkbox"
                style="@style/CheckBox"
                android:text="I agree to the disclaimer"
                android:paddingStart="@dimen/margin_medium"
                android:textColor="@color/colorTextSecondary"/>

        </LinearLayout>

        <Button
            android:id="@+id/create_password_button"
            style="@style/TextButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_password"
            android:layout_marginBottom="@dimen/margin_large" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/create_password_disclaimer"
                style="@style/TextButtonBlue"
                android:textSize="@dimen/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/disclaimer" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>
